<resources>
    <string name="app_name">Karma</string>
    <string name="name_edit">Name</string>
    <string name="mood_button">Mood</string>
    <string name="feeling">How you are feeling... </string>
    <string-array name="moods">
        <item>happy</item>
        <item>sad</item>
        <item>confused</item>
        <item>angry</item>
    </string-array>
    <string name="toggle_on">positive</string>
    <string name="toggle_off">negative</string>
    <string name="meditate_switch">Meditate</string>
    <string name="yoga">Yoga</string>
    <string name="yogaRadioGroup"></string>
    <string name="yoga1_radio">Yin</string>
    <string name="yoga2_radio">Bikram</string>
    <string name="yoga3_radio">Hatha</string>
    <string name="enlightened_check">enlightened</string>
    <string name="secretive_check">secretive</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="conservative_check">convservative</string>

</resources>
